@@ -7,6 +7,10 @@ CruiseControl Release Notes - 2.6.2-dev
 build loop
 ======================
 
+HttpFile
+----------------------
+* Fix bug where HttpFile didn't work with domain only (http://host.com) urls (CC-614). Patch by J. David Beutel
+
 PhingBuilder
 ----------------------
 * Add new plug-in for PHP build tool Phing (CC-613). Submitted by Hans Lellelid.
